@@ -1,3 +1,5 @@
+- Fix file uploading by setting Content-Type explicitly.
+
 ---------------------------------------------
 1.7.3 (2013-09-05)
 
